--- a/src/main/resources/templates/opretLejekontrakt.html
+++ b/src/main/resources/templates/opretLejekontrakt.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="da">
+<html lang="da" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <link rel="stylesheet" th:href="@{/static/style.css}">
+    <link rel="stylesheet" th:href="@{/style.css}">
     <meta charset="UTF-8">
     <title>Opret en lejekontrakt</title>
 </head>
@@ -12,38 +12,38 @@
 <!-- MENUBAR -->
 <nav class="menubar">
     <ul>
-        <li><a href="/dashboard">Dashboard</a></li>
+        <li><a th:href="@{/dashboard}">Dashboard</a></li>
 
         <li class="dropdown">
-            <a href="/biloverblik">Biler</a>
+            <a th:href="@{/biloverblik}">Biler</a>
             <div class="dropdown-content">
-                <a href="/biloverblik">Overblik over biler</a>
-                <a href="/bil/opret">Opret ny bil</a>
+                <a th:href="@{/biloverblik}">Overblik over biler</a>
+                <a th:href="@{/bil/opret}">Opret ny bil</a>
             </div>
         </li>
 
         <li class="dropdown">
-            <a href="/lejekontraktOverblik">Lejekontrakter</a>
+            <a th:href="@{/lejekontraktOverblik}">Lejekontrakter</a>
             <div class="dropdown-content">
-                <a href="/lejekontraktOverblik">Overblik lejekontrakter</a>
-                <a href="/opretLejekontrakt">Opret lejekontrakt</a>
-                <a href="/updateLejekontrakt">Opdater lejekontrakt</a>
+                <a th:href="@{/lejekontraktOverblik}">Overblik lejekontrakter</a>
+                <a th:href="@{/opretLejekontrakt}">Opret lejekontrakt</a>
+                <a th:href="@{/updateLejekontrakt}">Opdater lejekontrakt</a>
             </div>
         </li>
 
-        <li><a href="/kundeoverblik">Kunder</a></li>
+        <li><a th:href="@{/kundeoverblik}">Kunder</a></li>
 
         <li class="dropdown">
-            <a href="/tilstandsrapport">Rapporter</a>
+            <a th:href="@{/tilstandsrapport}">Rapporter</a>
             <div class="dropdown-content">
-                <a href="/tilstandsrapport">Tilstandsrapporter</a>
-                <a href="/opretTilstandsrapport">Opret tilstandsrapport</a>
-                <a href="/skaderapport">Skaderapporter</a>
-                <a href="/opretskaderapport">Opret skaderapport</a>
+                <a th:href="@{/tilstandsrapport}">Tilstandsrapporter</a>
+                <a th:href="@{/opretTilstandsrapport}">Opret tilstandsrapport</a>
+                <a th:href="@{/skaderapport}">Skaderapporter</a>
+                <a th:href="@{/opretskaderapport}">Opret skaderapport</a>
             </div>
         </li>
 
-        <li><a href="/logout">Log ud</a></li>
+        <li><a th:href="@{/logout}">Log ud</a></li>
     </ul>
 </nav>
 <!-- SLUT MENUBAR -->
@@ -55,7 +55,7 @@
     <form th:action="@{/opret-lejekontrakt}" method="post" th:object="${lejekontrakt}">
 
         <label for="kontraktId">Lejekontrakt ID</label>
-        <input type="text" id="kontraktId" th:field="*{kontraktId}" required> <!-- Hvis der ikke skrives noget i feltet vil browsereen vise at der skal skrives noget-->
+        <input type="text" id="kontraktId" th:field="*{kontraktId}" required>
 
         <label for="kundeId">Kunde ID</label>
         <input type="text" id="kundeId" th:field="*{kundeId}" required>
@@ -81,7 +81,7 @@
 </div>
 
 <div class="tilbage-knap">
-    <a href="/lejekontraktOverblik"><button>Tilbage til liste</button></a>
+    <a th:href="@{/lejekontraktOverblik}"><button>Tilbage til liste</button></a>
 </div>
 
 </body>
