--- a/src/main/resources/templates/updateKunde.html
+++ b/src/main/resources/templates/updateKunde.html
@@ -1,45 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
     <title>Opdater kunde</title>
-    <link rel="stylesheet" th:href="@{/static/style.css}">
+    <link rel="stylesheet" th:href="@{/style.css}">
 </head>
 
-
 <body>
-    <div class="intro-updateKunde">
-        <h1>Opdater Kunde</h1>
-    </div>
-    <div class="tabel-updateKunde">
-        <form th:action="@{/updateKunde}" th:object="${updateKunde}" method="post">
+<div class="intro-updateKunde">
+    <h1>Opdater Kunde</h1>
+</div>
+<div class="tabel-updateKunde">
+    <form th:action="@{/updateKunde}" th:object="${updateKunde}" method="post">
 
-            <label>Kunde ID</label>
-            <input type="text" th:field="*{kundeId}" readonly><br>
+        <label>Kunde ID</label>
+        <input type="text" th:field="*{kundeId}" readonly><br>
 
-            <label>Navn</label>
-            <input type="text" th:field="*{navn}"><br>
+        <label>Navn</label>
+        <input type="text" th:field="*{navn}"><br>
 
-            <label>Adresse</label>
-            <input type="text" th:field="*{adresse}"><br>
+        <label>Adresse</label>
+        <input type="text" th:field="*{adresse}"><br>
 
-            <label>Telefonnummer</label>
-            <input type="text" th:field="*{telefonnr}"><br>
+        <label>Telefonnummer</label>
+        <input type="text" th:field="*{telefonnr}"><br>
 
-            <label>Email</label>
-            <input type="email" th:field="*{email}"><br>
+        <label>Email</label>
+        <input type="email" th:field="*{email}"><br>
 
-            <button type="submit">Opdater</button>
+        <button type="submit">Opdater</button>
 
-        </form>
-    </div>
-
-</body>
-
+    </form>
+</div>
 
 <div class="tilbage-knap">
-    <a href="/kundeOversigt"><button>Tilbage</button></a>
+    <a th:href="@{/kundeOversigt}"><button>Tilbage</button></a>
 </div>
+
+</body>
 
 </html>
