--- a/src/main/resources/templates/forretningsudvikler.html
+++ b/src/main/resources/templates/forretningsudvikler.html
@@ -13,7 +13,7 @@
     <div class="boks udlejede-biler">
         <h2>Udlejede biler</h2>
         <ul>
-            <li th:each="bil : ${udlejedeBiler}" th:text="${bil.model}">Bilnavn</li>
+            <li th:each="bil : ${biler}" th:text="${bil.model}">Bilnavn</li>
         </ul>
     </div>
 
@@ -28,7 +28,7 @@
     <!-- samlet indtaegt -->
     <div class="boks samlet-indtaegt">
         <h2>Samlet indtægt</h2>
-        <p th:text="${indtjening + ' kr.'}">0 kr.</p>
+        <p th:text="${samletIndtaegt + ' kr.'}">0 kr.</p>
     </div>
 
 </div>
