biler/forretningsudvikler rettet 2.0

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -14,9 +14,9 @@
         <li><a th:href="@{/dashboard}">Dashboard</a></li>
 
         <li class="dropdown">
-            <a th:href="@{/biloverblik}">Biler</a>
+            <a th:href="@{/forretningsudvikler}">Biler</a>
             <div class="dropdown-content">
-                <a th:href="@{/biloverblik}">Overblik over biler</a>
+                <a th:href="@{/forretningsudvikler}">Overblik over biler</a>
                 <a th:href="@{/bil/opret}">Opret ny bil</a>
             </div>
         </li>
@@ -30,7 +30,7 @@
             </div>
         </li>
 
-        <li><a th:href="@{/kundeoverblik}">Kunder</a></li>
+        <li><a th:href="@{/kundeOverblik}">Kunder</a></li>
 
         <li class="dropdown">
             <a th:href="@{/tilstandsrapport}">Rapporter</a>
@@ -38,7 +38,7 @@
                 <a th:href="@{/tilstandsrapport}">Tilstandsrapporter</a>
                 <a th:href="@{/opretTilstandsrapport}">Opret tilstandsrapport</a>
                 <a th:href="@{/skaderapport}">Skaderapporter</a>
-                <a th:href="@{/opretskaderapport}">Opret skaderapport</a>
+                <a th:href="@{/opretSkaderapport}">Opret skaderapport</a>
             </div>
         </li>
 
