--- a/src/main/resources/templates/forretningsudvikler.html
+++ b/src/main/resources/templates/forretningsudvikler.html
@@ -7,13 +7,52 @@
 </head>
 <body>
 
+<!-- MENUBAR -->
+<nav class="menubar">
+    <ul>
+        <li><a th:href="@{/dashboard}">Dashboard</a></li>
+
+        <li class="dropdown">
+            <a th:href="@{/biloverblik}">Biler</a>
+            <div class="dropdown-content">
+                <a th:href="@{/biloverblik}">Overblik over biler</a>
+                <a th:href="@{/bil/opret}">Opret ny bil</a>
+            </div>
+        </li>
+
+        <li class="dropdown">
+            <a th:href="@{/lejekontraktOverblik}">Lejekontrakter</a>
+            <div class="dropdown-content">
+                <a th:href="@{/lejekontraktOverblik}">Overblik lejekontrakter</a>
+                <a th:href="@{/opretLejekontrakt}">Opret lejekontrakt</a>
+                <a th:href="@{/updateLejekontrakt}">Opdater lejekontrakt</a>
+            </div>
+        </li>
+
+        <li><a th:href="@{/kundeOverblik}">Kunder</a></li>
+
+        <li class="dropdown">
+            <a th:href="@{/tilstandsrapport}">Rapporter</a>
+            <div class="dropdown-content">
+                <a th:href="@{/tilstandsrapport}">Tilstandsrapporter</a>
+                <a th:href="@{/opretTilstandsrapport}">Opret tilstandsrapport</a>
+                <a th:href="@{/skaderapport}">Skaderapporter</a>
+                <a th:href="@{/opretskaderapport}">Opret skaderapport</a>
+            </div>
+        </li>
+
+        <li><a th:href="@{/logout}">Log ud</a></li>
+    </ul>
+</nav>
+<!-- SLUT MENUBAR -->
+
 <div class="container">
 
     <!-- ikke ledige biler -->
     <div class="boks udlejede-biler">
         <h2>Udlejede biler</h2>
         <ul>
-            <li th:each="bil : ${biler}" th:text="${bil.model}">Bilnavn</li>
+            <li th:each="bil : ${udlejedeBiler}" th:text="${bil.model}">Bilnavn</li>
         </ul>
     </div>
 
@@ -28,7 +67,7 @@
     <!-- samlet indtaegt -->
     <div class="boks samlet-indtaegt">
         <h2>Samlet indtægt</h2>
-        <p th:text="${samletIndtaegt + ' kr.'}">0 kr.</p>
+        <p th:text="${indtjening + ' kr.'}">0 kr.</p>
     </div>
 
 </div>
