--- a/src/main/resources/templates/lejekontraktOverblik.html
+++ b/src/main/resources/templates/lejekontraktOverblik.html
@@ -15,9 +15,9 @@
         <li><a th:href="@{/dashboard}">Dashboard</a></li>
 
         <li class="dropdown">
-            <a th:href="@{/biloverblik}">Biler</a>
+            <a th:href="@{/forretningsudvikler}">Biler</a>
             <div class="dropdown-content">
-                <a th:href="@{/biloverblik}">Overblik over biler</a>
+                <a th:href="@{/forretningsudvikler}">Overblik over biler</a>
                 <a th:href="@{/bil/opret}">Opret ny bil</a>
             </div>
         </li>
@@ -31,7 +31,7 @@
             </div>
         </li>
 
-        <li><a th:href="@{/kundeoverblik}">Kunder</a></li>
+        <li><a th:href="@{/kundeOverblik}">Kunder</a></li>
 
         <li class="dropdown">
             <a th:href="@{/tilstandsrapport}">Rapporter</a>
@@ -39,7 +39,7 @@
                 <a th:href="@{/tilstandsrapport}">Tilstandsrapporter</a>
                 <a th:href="@{/opretTilstandsrapport}">Opret tilstandsrapport</a>
                 <a th:href="@{/skaderapport}">Skaderapporter</a>
-                <a th:href="@{/opretskaderapport}">Opret skaderapport</a>
+                <a th:href="@{/opretSkaderapport}">Opret skaderapport</a>
             </div>
         </li>
 
@@ -73,7 +73,7 @@
             <td th:text="${lejekontrakt.bilId}"></td>
             <td th:text="${lejekontrakt.startDato}"></td>
             <td th:text="${lejekontrakt.slutDato}"></td>
-            <td th:text="${lejekontrakt.abonnementType ? 'Limeted' : 'onlimeted'}"></td>
+            <td th:text="${lejekontrakt.abonnementType == T(com.example.bil.model.Lejekontrakt.AbonnementType).limited ? 'Limited' : 'Unlimited'}"></td>
             <td th:text="${lejekontrakt.pris}"></td>
         </tr>
         </tbody>
@@ -94,12 +94,9 @@
     </a>
 </div>
 
-<!--slet knappen-->
-<div class="slet-knapLejekontrakt">
-    <form th:action="@{'/slet-lejekontrakt/' + ${lejekontrakt.kontraktId}}" method="get"
-          onsubmit="return confirm('Er du sikker på, at du vil slette denne lejekontrakt?');">
-        <button type="submit" class="slet-knap">Slet</button>
-    </form>
+<!--slet knappen - FIXED: Skal være inde i tabellen per række-->
+<div th:if="${not #lists.isEmpty(lejekontraktListe)}">
+    <p>For at slette en kontrakt, tilføj slet-knapper til hver række i tabellen.</p>
 </div>
 
 </body>
