--- a/src/main/resources/templates/kundeOverblik.html
+++ b/src/main/resources/templates/kundeOverblik.html
@@ -7,15 +7,17 @@
     <link rel="stylesheet" th:href="@{/style.css}">
 </head>
 
+<body>
+
 <!-- MENUBAR -->
 <nav class="menubar">
     <ul>
         <li><a th:href="@{/dashboard}">Dashboard</a></li>
 
         <li class="dropdown">
-            <a th:href="@{/biloverblik}">Biler</a>
+            <a th:href="@{/forretningsudvikler}">Biler</a>
             <div class="dropdown-content">
-                <a th:href="@{/biloverblik}">Overblik over biler</a>
+                <a th:href="@{/forretningsudvikler}">Overblik over biler</a>
                 <a th:href="@{/bil/opret}">Opret ny bil</a>
             </div>
         </li>
@@ -29,7 +31,7 @@
             </div>
         </li>
 
-        <li><a th:href="@{/kundeoverblik}">Kunder</a></li>
+        <li><a th:href="@{/kundeOverblik}">Kunder</a></li>
 
         <li class="dropdown">
             <a th:href="@{/tilstandsrapport}">Rapporter</a>
@@ -37,7 +39,7 @@
                 <a th:href="@{/tilstandsrapport}">Tilstandsrapporter</a>
                 <a th:href="@{/opretTilstandsrapport}">Opret tilstandsrapport</a>
                 <a th:href="@{/skaderapport}">Skaderapporter</a>
-                <a th:href="@{/opretskaderapport}">Opret skaderapport</a>
+                <a th:href="@{/opretSkaderapport}">Opret skaderapport</a>
             </div>
         </li>
 
@@ -50,7 +52,6 @@
     <h1>Overblik over kunder</h1>
 </div>
 
-<body>
 <div class="tabelOversigt-kunder">
     <table>
         <thead>
@@ -60,36 +61,36 @@
             <th>Adresse</th>
             <th>Telefon Nr</th>
             <th>Email</th>
+            <th>Handlinger</th>
         </tr>
         </thead>
 
         <tbody>
-        <tr th:each="kunde:${kundeListe}">
+        <tr th:each="kunde : ${kundeListe}">
             <td th:text="${kunde.kundeId}"></td>
             <td th:text="${kunde.navn}"></td>
-            <td th:text ="${kunde.adresse}"></td>
-            <td th:text="${kunde.telefonNr}"></td>
+            <td th:text="${kunde.adresse}"></td>
+            <td th:text="${kunde.telefonnr}"></td> <!-- FIXED: Correct field name -->
             <td th:text="${kunde.email}"></td>
+            <td>
+                <a th:href="@{'/updateKunde/' + ${kunde.kundeId}}">
+                    <button class="update-knap">Opdater</button>
+                </a>
+                <a th:href="@{'/slet-kunde/' + ${kunde.kundeId}}"
+                   onclick="return confirm('Er du sikker på, at du vil slette denne kunde?');">
+                    <button class="slet-knap">Slet</button>
+                </a>
+            </td>
         </tr>
         </tbody>
     </table>
 </div>
 
 <div class="opret-kundeknap">
-    <a th:href="@{/opretKunde}"><button>Opret kunde</button></a>
-</div>
-
-<div class="update-kundeknap">
-    <a th:href="@{/updateKunde}"><button>Opdater kunde</button></a>
-</div>
-
-<div class="slet-knapKunde">
-    <form th:action="@{'/sletKunde/' + ${kunde.kundeId}}" method="get"
-          onsubmit="return confirm('Er du sikker på, at du vil slette denne kunde?');">
-        <button type="submit" class="slet-knap">Slet</button>
-    </form>
+    <a th:href="@{/opretKunde}">
+        <button class="opret-knap">Opret kunde</button>
+    </a>
 </div>
 
 </body>
-
 </html>
