--- a/src/main/resources/templates/opretKunde.html
+++ b/src/main/resources/templates/opretKunde.html
@@ -1,79 +1,89 @@
 <!DOCTYPE html>
-<html lang="da" xmlns:th="http://www.thymeleaf.org">
+<html lang="da">
 
 <head>
     <meta charset="UTF-8">
-    <title>Opret Kunde</title>
-    <link rel="stylesheet" th:href="@{/style.css}">
+    <title>Bilabonnement A/S</title>
+    <link rel="stylesheet" th:href="@{/static/style.css}">
 </head>
 
-<body>
 
 <!-- MENUBAR -->
 <nav class="menubar">
     <ul>
-        <li><a th:href="@{/dashboard}">Dashboard</a></li>
+        <li><a href="/dashboard">Dashboard</a></li>
+
         <li class="dropdown">
-            <a th:href="@{/forretningsudvikler}">Biler</a>
+            <a href="/biloverblik">Biler</a>
             <div class="dropdown-content">
-                <a th:href="@{/forretningsudvikler}">Overblik over biler</a>
-                <a th:href="@{/bil/opret}">Opret ny bil</a>
+                <a href="/biloverblik">Overblik over biler</a>
+                <a href="/bil/opret">Opret ny bil</a>
             </div>
         </li>
+
         <li class="dropdown">
-            <a th:href="@{/lejekontraktOverblik}">Lejekontrakter</a>
+            <a href="/lejekontraktOverblik">Lejekontrakter</a>
             <div class="dropdown-content">
-                <a th:href="@{/lejekontraktOverblik}">Overblik lejekontrakter</a>
-                <a th:href="@{/opretLejekontrakt}">Opret lejekontrakt</a>
-                <a th:href="@{/updateLejekontrakt}">Opdater lejekontrakt</a>
+                <a href="/lejekontraktOverblik">Overblik lejekontrakter</a>
+                <a href="/opretLejekontrakt">Opret lejekontrakt</a>
+                <a href="/updateLejekontrakt">Opdater lejekontrakt</a>
             </div>
         </li>
-        <li><a th:href="@{/kundeOverblik}">Kunder</a></li>
+
+        <li><a href="/kundeoverblik">Kunder</a></li>
+
         <li class="dropdown">
-            <a th:href="@{/tilstandsrapport}">Rapporter</a>
+            <a href="/tilstandsrapport">Rapporter</a>
             <div class="dropdown-content">
-                <a th:href="@{/tilstandsrapport}">Tilstandsrapporter</a>
-                <a th:href="@{/opretTilstandsrapport}">Opret tilstandsrapport</a>
-                <a th:href="@{/skaderapport}">Skaderapporter</a>
-                <a th:href="@{/opretSkaderapport}">Opret skaderapport</a>
+                <a href="/tilstandsrapport">Tilstandsrapporter</a>
+                <a href="/opretTilstandsrapport">Opret tilstandsrapport</a>
+                <a href="/skaderapport">Skaderapporter</a>
+                <a href="/opretskaderapport">Opret skaderapport</a>
             </div>
         </li>
-        <li><a th:href="@{/logout}">Log ud</a></li>
+
+        <li><a href="/logout">Log ud</a></li>
     </ul>
 </nav>
 <!-- SLUT MENUBAR -->
 
+
+
+
+
+<body>
+
 <div class="intro-opretKunde">
-    <h1>Opret Ny Kunde</h1>
+    <h1>Opret kunde</h1>
 </div>
 
 <div class="tabel-opretKunde">
-    <form th:action="@{/opretKunde}" th:object="${kunde}" method="post">
+    <form th:action="@{/opretKunde}" method="post" th:object="${kunde}">
+        <label for="kundeId">Kunde Id</label>
+        <input type="text" id="kundeId" th:field="*{kundeId}" />
 
-        <label>Kunde ID</label>
-        <input type="number" th:field="*{kundeId}" required><br>
+        <label for="navn">Navn</label>
+        <input type="text" id="navn" th:field="*{navn}" />
 
-        <label>Navn</label>
-        <input type="text" th:field="*{navn}" required><br>
+        <label for="adresse">Adresse</label>
+        <input type="text" id="adresse" th:field="*{adresse}" />
 
-        <label>Adresse</label>
-        <input type="text" th:field="*{adresse}" required><br>
+        <label for="telefonnr">Telefonnummer</label>
+        <input type="text" id="telefonnr" th:field="*{telefonnr}" />
 
-        <label>Telefonnummer</label>
-        <input type="text" th:field="*{telefonnr}" required><br>
+        <label for="email">Email</label>
+        <input type="email" id="email" th:field="*{email}" />
 
-        <label>Email</label>
-        <input type="email" th:field="*{email}" required><br>
-
-        <button type="submit">Opret Kunde</button>
-
+        <button type="submit">Opret kunde</button>
     </form>
 </div>
 
+
+
+
+
 <div class="tilbage-knap">
-    <a th:href="@{/kundeOverblik}">
-        <button>Tilbage til oversigt</button>
-    </a>
+    <a href="/kundeOversigt"><button>Tilbage</button></a>
 </div>
 
 </body>
