alt css opdateret

--- a/src/main/resources/templates/lejekontraktOverblik.html
+++ b/src/main/resources/templates/lejekontraktOverblik.html
@@ -2,7 +2,7 @@
 <html lang="da">
 
 <head>
-    <link rel="stylesheet" th:href="@{/static/style.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
     <meta charset="UTF-8">
     <title>Overblik over lejekontrakterne</title>
 </head>
