--- a/src/main/resources/templates/opretLejekontrakt.html
+++ b/src/main/resources/templates/opretLejekontrakt.html
@@ -2,7 +2,7 @@
 <html lang="da" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <link rel="stylesheet" th:href="@{/style.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
     <meta charset="UTF-8">
     <title>Opret en lejekontrakt</title>
 </head>
