--- a/src/main/resources/templates/forretningsudvikler.html
+++ b/src/main/resources/templates/forretningsudvikler.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Forretningsudvikler - Overblik</title>
-    <link rel="stylesheet" th:href="@{/static/style.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
 </head>
 <body>
 
