--- a/src/main/resources/templates/opretKunde.html
+++ b/src/main/resources/templates/opretKunde.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Bilabonnement A/S</title>
-    <link rel="stylesheet" th:href="@{/static/style.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
 </head>
 
 
