--- a/src/main/resources/templates/updateKunde.html
+++ b/src/main/resources/templates/updateKunde.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Opdater kunde</title>
-    <link rel="stylesheet" th:href="@{/style.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
 </head>
 
 <body>
