skrevet noter til medarbejder klassen

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -194,6 +194,9 @@ input {
     border-radius: 4px;
     margin-bottom: 20px;
 }
+
+
+
 /* ===== FORMULAR START ===== */
 /* Styling til titel sektionen */
 .intro-tsrapportlist, .intro-tsformular,.intro-opretKontrakt {
@@ -273,3 +276,8 @@ input {
 
 
 /* ===== FORMULAR SLUT ===== */
+
+
+/*===== OVERBLIK START=====*/
+
+
