--- a/src/main/resources/templates/tilstandsrapport.html
+++ b/src/main/resources/templates/tilstandsrapport.html
@@ -8,81 +8,96 @@
 </head>
 <body>
 
+
 <!-- MENUBAR -->
 <nav class="menubar">
     <ul>
-        <li><a th:href="@{/dashboard}">Dashboard</a></li>
+        <li><a href="/dashboard">Dashboard</a></li>
+
 
         <li class="dropdown">
-            <a th:href="@{/biloverblik}">Biler</a>
+            <a href="/biloverblik">Biler</a>
             <div class="dropdown-content">
-                <a th:href="@{/biloverblik}">Overblik over biler</a>
-                <a th:href="@{/bil/opret}">Opret ny bil</a>
+                <a href="/biloverblik">Overblik over biler</a>
+                <a href="/bil/opret">Opret ny bil</a>
             </div>
         </li>
 
+
         <li class="dropdown">
-            <a th:href="@{/lejekontraktOverblik}">Lejekontrakter</a>
+            <a href="/lejekontraktOverblik">Lejekontrakter</a>
             <div class="dropdown-content">
-                <a th:href="@{/lejekontraktOverblik}">Overblik lejekontrakter</a>
-                <a th:href="@{/opretLejekontrakt}">Opret lejekontrakt</a>
-                <a th:href="@{/updateLejekontrakt}">Opdater lejekontrakt</a>
+                <a href="/lejekontraktOverblik">Overblik lejekontrakter</a>
+                <a href="/opretLejekontrakt">Opret lejekontrakt</a>
+                <a href="/updateLejekontrakt">Opdater lejekontrakt</a>
             </div>
         </li>
 
-        <li><a th:href="@{/kundeoverblik}">Kunder</a></li>
+
+        <li><a href="/kundeoverblik">Kunder</a></li>
+
 
         <li class="dropdown">
-            <a th:href="@{/tilstandsrapport}">Rapporter</a>
+            <a href="/tilstandsrapport">Rapporter</a>
             <div class="dropdown-content">
-                <a th:href="@{/tilstandsrapport}">Tilstandsrapporter</a>
-                <a th:href="@{/opretTilstandsrapport}">Opret tilstandsrapport</a>
-                <a th:href="@{/skaderapport}">Skaderapporter</a>
-                <a th:href="@{/opretskaderapport}">Opret skaderapport</a>
+                <a href="/tilstandsrapport">Tilstandsrapporter</a>
+                <a href="/opretTilstandsrapport">Opret tilstandsrapport</a>
+                <a href="/skaderapport">Skaderapporter</a>
+                <a href="/opretskaderapport">Opret skaderapport</a>
             </div>
         </li>
 
-        <li><a th:href="@{/logout}">Log ud</a></li>
+
+        <li><a href="/logout">Log ud</a></li>
     </ul>
 </nav>
-<!-- SLUT MENUBAR -->
+<!-- SLUT MENUBAR ---->
 
-<h1>Tilstandsrapporter</h1>
 
-<a th:href="@{/opretTilstandsrapport}" class="button">Opret ny tilstandsrapport</a>
 
-<table>
-    <thead>
-    <tr>
-        <th>RapportID</th>
-        <th>Bil ID</th>
-        <th>Kontrakt ID</th>
-        <th>Dato</th>
-        <th>Medarbejder ID</th>
-        <th>Skadet</th>
-        <th>Handlinger</th>
-    </tr>
-    </thead>
 
-    <tbody>
-    <tr th:each="rapport : ${rapporter}">
-        <td th:text="${rapport.tilstandsrapportId}"></td>
-        <td th:text="${rapport.bilId}"></td>
-        <td th:text="${rapport.kontraktId}"></td>
-        <td th:text="${#dates.format(rapport.tilstandsrapportDato, 'dd-MM-yyyy')}"></td>
-        <td th:text="${rapport.medarbejderId}"></td>
-        <td th:text="${rapport.erSkadet ? 'Ja' : 'Nej'}"></td>
-        <td>
-            <div class="slet-knapTilstandsrapport">
-                <form th:action="@{'/tilstandsrapport/slet/' + ${rapport.tilstandsrapportId}}" method="get"
-                      onsubmit="return confirm('Er du sikker på, at du vil slette denne tilstandsrapport?');">
-                    <button type="submit" class="slet-knap">Slet</button>
-                </form>
-            </div>
-        </td>
-    </tr>
-    </tbody>
-</table>
+<div class="intro-tsrapportlist">
+    <h1>Tilstandsrapporter</h1>
+</div>
 
+
+<a href="opretTilstandsrapport" class="button">Opret ny tilstandsrapport</a>
+
+
+<div class="ts-oversigt">
+    <table>
+        <thead>
+        <tr>
+            <th>RapportID</th>
+            <th>Bil ID</th>
+            <th>Kontrakt ID</th>
+            <th>Dato</th>
+            <th>Medarbejder ID</th>
+            <th>Skadet</th>
+            <th>Handlinger</th>
+        </tr>
+        </thead>
+
+
+        <tbody>
+        <tr th:each="rapport : ${rapporter}">
+            <td th:text="${rapport.tilstandsrapportId}"></td>
+            <td th:text="${rapport.bilId}"></td>
+            <td th:text="${rapport.kontraktId}"></td>
+            <td th:text="${#dates.format(rapport.tilstandsrapportDato, 'dd-MM-yyyy')}"></td>
+            <td th:text="${rapport.medarbejderId}"></td>
+            <td th:text="${rapport.erSkadet ? 'Ja' : 'Nej'}"></td>
+            <td>
+                <div class="slet-knapTilstandsrapport">
+                    <form th:action="@{'/tilstandsrapport/slet/' + ${rapport.tilstandsrapportId}}" method="get"
+                          onsubmit="return confirm('Er du sikker på, at du vil slette denne tilstandsrapport?');">
+                        <button type="submit" class="slet-knap">Slet</button>
+                    </form>
+                </div>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
